# dmc_detection_python

./: README.md  api.py  data.py  estimator_zero_crossings.py  libdmtx_decode.py  main.py  pyproject.toml  to_dos  viz.py  zxing_decode.py
.github/workflows/: ci.yml
benchmarks/: benchmark.py
dm_decoder/: decoder.py
dm_decoder/grid_estimation/: __init__.py  estimator.py
dm_detector/: pipeline.py
dm_detector/extraction/: candidate_extraction.py
dm_detector/geometry/: border_fitter.py
dm_detector/location/: dashed_border_detector.py  l_finder_detector.py  validator.py
dmc/: __init__.py  api.py  config.py  data.py  debug.py  viz.py
dmc/decoder/: decoder.py
dmc/decoder/grid_estimation/: estimator.py
dmc/decoder/sampling/: __init__.py  sampler.py
dmc/detector/: __init__.py  pipeline.py
dmc/detector/extraction/: candidate_extraction.py
dmc/detector/geometry/: __init__.py  border_fitter.py  polarity.py
dmc/detector/location/: dashed_border_detector.py  l_finder_detector.py  validator.py
tests/: cases.py  conftest.py  test_decode.py  test_detection.py  test_unexpected.py
utils/: utils.py
